# one

./: package-lock.json  package.json
src/: App.jsx  Side_Navbar.jsx  SidebarData.js  Top_Navbar.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs  recorder.rs
src/components/: Header.jsx  Sidebar.jsx
src/components/Complaince/: emulatorstream.jsx
src/components/NexGen_QE/landingpage.jsx/: OrchestrateTab.jsx  QElandingpage.jsx
src/components/Organization/landingpage/: AccountsTable.jsx  Landingpage.jsx  OrganizationInfo.jsx  OrganizationSetup.jsx  ProjectsTable.jsx
